SigmaCodebackup3rdSep/objects/Resource_Location__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>Service_Resource__c</referenceTo>
        <relationshipLabel>Resource Locations</relationshipLabel>
        <relationshipName>Resource_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Resource Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Resource Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>